# status

./: .dockerignore  .env.example  .env.template  .gitignore  .pre-commit-config.yaml  CHANGELOG.md  CLAUDE.md  Cargo.toml  Dockerfile  LICENSE  README.md  custom-emoji-todo.md  docker-compose.yml  fly.review.toml  fly.toml  hatk.config.ts  justfile  package-lock.json  package.json  progress.md  rust-toolchain.toml  svelte.config.js  test_metadata_validation.py  test_oauth.py  test_oauth_minimal.py  test_oauth_real.py  test_scopes.js  tsconfig.server.json  vite.config.ts
.github/workflows/: ci.yml  claude.yml  fly-review.yml
app/: app.css  app.html
app/lib/: atclients.ts  auth.ts  preferences.ts  queries.ts
docs/: Caddyfile  Caddyfile.dev  Dockerfile
lexicons/: status.json
notes/: quickslice-migration.md
patches/: @hatk+hatk+0.0.1-alpha.45.patch
scripts/: add_custom_emoji.py  register_emojis.py  scrape_bufo_emojis.py
server/: on-login.ts
site/: app.js  fly.toml  index.html  package.json  styles.css
src/: config.rs  db.rs  dev_utils.rs  emoji.rs  error_handler.rs  ingester.rs  main.rs  rate_limiter.rs  resolver.rs  storage.rs  templates.rs  webhooks.rs
src/api/: mod.rs  (+7 more)
static/: admin.js  bufos.json  emoji-data.js  emoji-resolver.js  feed.css  feed.js  markdown.js  settings-ui.js  settings.css  settings.js  share.js  status.js  theme.js  timestamps.js  webhook_guide.css  webhook_guide.js
templates/: base.html  error.html  feed.html  feed_clean.html  home.html  login.html  settings.html  status.html  status_share.html  user.html  webhook_settings.html
(+62 files in other folders)
