[package]
name = "rusty_statusphere_example_app"
version = "0.1.0"
edition = "2024"

[dependencies]
askama = "0.12"
actix-files = "0.6.6"
actix-session = { version = "0.10", features = ["cookie-session"] }
actix-web = "4.9"
serde = { version = "1.0", features = ["derive"] }
log = "0.4"
async-stream = "0.3"
env_logger = "0.11"
anyhow = "1.0.97"
serde_json = "1.0.140"
atrium-api = "0.25.0"
atrium-xrpc-client = "0.5.10"
