[package]
name = "nate-status"
version = "0.1.0"
edition = "2024"
# Based on Bailey Townsend's Rusty Statusphere example app
# https://github.com/fatfingers23/rusty_statusphere_example_app

[dependencies]
actix-files = "0.6.6"
actix-session = { version = "0.10", features = ["cookie-session"] }
actix-web = "4.10.2"
actix-multipart = "0.6"
anyhow = "1.0.97"
askama = "0.13"
atrium-common = "0.1.1"
atrium-api = "0.25.0"
atrium-identity = "0.1.3"
atrium-oauth = "0.1.0"
chrono = "0.4.40"
env_logger = "0.11.7"
hickory-resolver = "0.24.1"
log = "0.4.27"
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.140"
rocketman = "0.2.0"
tokio = { version = "1", features = ["macros", "rt-multi-thread"] }
futures-util = "0.3"
dotenv = "0.15.0"
thiserror = "1.0.69"
async-sqlite = "0.5.0"
async-trait = "0.1.88"
rand = "0.8"
reqwest = { version = "0.12", features = ["json"] }
once_cell = "1.19"
hmac = "0.12"
sha2 = "0.10"
hex = "0.4"

[build-dependencies]
askama = "0.13"


[profile.dev.package.askama_derive]
opt-level = 3
